force-app/main/default/objects/AssociationDocumentTemplate__mdt/AssociationDocumentTemplate__mdt.object-meta.xml
<CustomObject>
    <label>Association des modeles de doc</label>
    <pluralLabel>Associations des modeles de doc</pluralLabel>
</CustomObject>