force-app/main/default/objects/AssociationDocumentTemplate__mdt/fields/Master_object__c.field-meta.xml
<CustomField>
    <fullName>Master_object__c</fullName>
    <label>Master object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>