force-app/main/default/objects/AssociationDocumentTemplate__mdt/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <label>order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>