force-app/main/default/objects/AssociationDocumentTemplate__mdt/fields/Template_to_use__c.field-meta.xml
<CustomField>
    <fullName>Template_to_use__c</fullName>
    <label>Id du template à utiliser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>