force-app/main/default/objects/AssociationDocumentTemplate__mdt/fields/Vfp_used__c.field-meta.xml
<CustomField>
    <fullName>Vfp_used__c</fullName>
    <label>Vfp à utiliser</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>